--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- header part -->
 
     <header class="headers">
-        <section >
+        <section>
             <div class="container">
 
                 <div class="heads">
@@ -49,22 +49,197 @@
 
                 <input class="button" type="button" value="Explore More">
 
+                <!-- secrion----2 -->
 
         </section>
         <section class="picture">
             <img src="images/banner.png" alt="">
         </section>
-
-
     </header>
-
-
     <main>
 
 
+        <!-- section- grid with flex box-->
+        <section>
+            <div class="section-3">
+                <div class="box-1">
+                    <div>
+                        <img src="images/team1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/team2.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/team3.png" alt="">
+                    </div>
+                    <div>
+
+                        <img src="images/team4.png" alt="">
+                    </div>
+                </div>
+                <div class="box-2">
+                    <div class="box-header">
+
+                        <h1 class="box-titel"> Quick list <span class="bolt">of Our</span> <span
+                                class="color">Features</span> </h1>
+
+                        <p class="box-discription">There are many
+                            variations of passages of Lorem Ipsum
+                            available, but
+                            the majority have
+                            suffered alteration in some form, by injected humour, or randomised words which don't
+                            look even</p>
+                        <input class="button" type="button" value="Explore More">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- feature section -->
+
+        <section>
+            <div class="feature">
+                <div class="feature-header">
+                    <h2 class="feature-titel">Features you will love & enjoy
+                    </h2>
+                    <p class="feature-discription">There many
+                        variations of passages of Lorem
+                        Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                    <div class="feature-box">
+
+                        <div class=" feature-box-titel">Dexktop & Mobile Version</div>
+
+                        <div class="feature-discription">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour, or randomised
+                        </div>
+
+                    </div>
+                    <div class="feature-box">
+
+                        <div class=" feature-box-titel">Drag & Drop Builder</div>
+
+                        <div class="feature-discription">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour, or randomised
+                        </div>
+
+                    </div>
+                    <div class="feature-box">
+
+                        <div class=" feature-box-titel">Awesome Modern Design</div>
+
+                        <div class="feature-discription">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour, or randomised
+                        </div>
+
+                    </div>
+                    <div class="feature-box">
+
+                        <div class=" feature-box-titel"> Super Easy to Edi</div>
+
+                        <div class="feature-discription">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour, or randomised
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+
+                <div class="feature-header">
+
+                    <div>
+                        <img src="images/architect.png" alt="">
+                    </div>
+                    <button class="exp-button">10+Year <span class="Experience">Experience</span></button>
+
+                </div>
+
+
+        </section>
+        <!-- Some Facts section -->
+        <section class="fact">
+            <div class="fact-headers">
+                <h1 class="fact-titel">Some Facts</h1>
+                <p class="fact-discription">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="fact-header">
+                <div class="fact-box">
+                    <img src="images/icons/ribon.png" alt="">
+                    <div class="fact-box-titel">54</div>
+                    <div class="fact-box-discription">Awards Winnings</div>
+                </div>
+                <div class="fact-box">
+                    <img src="images/icons/projects.png" alt="">
+                    <div class="fact-box-titel">1458</div>
+                    <div class="fact-box-discription">Project Finished</div>
+                </div>
+                <div class="fact-box">
+                    <img src="images/icons/customers.png" alt="">
+                    <div class="fact-box-titel">590</div>
+                    <div class="fact-box-discription">Client Work</div>
+                </div>
+                <div class="fact-box">
+                    <img src="images/icons/email.png" alt="">
+                    <div class="fact-box-titel">22575</div>
+                    <div class="fact-box-discription">Email Sent</div>
+                </div>
+
+            </div>
+
+
+        </section>
+
+        <!--  Our Sponspors -->
+
+        <section>
+            <div class="Sponspor-header">
+
+                <div class="sponser-titel">
+                    Our Sponspors
+                </div>
+                <div class="Sponspors-discription">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered alteration.</div>
+            </div>
+
+            <div class="sponcer-head">
+
+                <div>
+                    <img src="images/sponsors/amazon.png" alt="">
+                </div>
+                <div>
+                    <img src="images/sponsors/google.png" alt="">
+                </div>
+                <div>
+                    <img src="images/sponsors/spotify.png" alt="">
+                </div>
+                <div>
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
+                <div>
+                    <img src="images/sponsors/telerama.png" alt="">
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
+        <div class="footer">
+            All rights reserved copyright@2023 startup landing page design
+        </div>
 
 
     </footer>
