--- a/index.html
+++ b/index.html
@@ -235,6 +235,35 @@
 
         </section>
 
+
+        <!-- contrack section -->
+
+        <section>
+
+            <div class="contacts">
+                <div class="address">
+                    <div class="contact-titel">Office Address</div>
+                    <p class="contact-discription">Level-4, 34, Awal Centre, Banani, Dhaka</p>
+                </div>
+
+                <div class="contact">
+                    <h2>Contact Us</h2>
+                    <input type="text" placeholder="Your Name" required>
+                    <br>
+                    <input type="email" name="" id="" placeholder="Email" required><br>
+                    <input class="button" type="submit" value="submit">
+                </div>
+
+
+
+
+
+
+            </div>
+
+        </section>
+
+
     </main>
     <footer>
         <div class="footer">
